[gd_scene load_steps=19 format=3 uid="uid://cyihqhuv8y634"]

[ext_resource type="Script" path="res://scripts/laser_mouse.gd" id="1_5o5ue"]
[ext_resource type="Texture2D" uid="uid://5r8bm0gmclnf" path="res://sprites/mouse/Tail-09.png" id="2_o72gg"]
[ext_resource type="Texture2D" uid="uid://baxmnfgi0jly" path="res://sprites/mouse/Tail-08.png" id="3_p1ehp"]
[ext_resource type="Texture2D" uid="uid://bxu6bky32xm0r" path="res://sprites/mouse/Tail-07.png" id="4_iqfua"]
[ext_resource type="Texture2D" uid="uid://bmgl2ntywmvjs" path="res://sprites/mouse/Tail-06.png" id="5_kwj5w"]
[ext_resource type="Texture2D" uid="uid://cawu44yugvsat" path="res://sprites/mouse/Tail-05.png" id="6_k83jl"]
[ext_resource type="Texture2D" uid="uid://b7annpnv8n2a6" path="res://sprites/mouse/Tail-04.png" id="7_lthv1"]
[ext_resource type="Texture2D" uid="uid://dbxlb7mlvklp0" path="res://sprites/mouse/Tail-03.png" id="8_8yq7g"]
[ext_resource type="Texture2D" uid="uid://p0l3ivb3crx8" path="res://sprites/mouse/Tail-02.png" id="9_ixcg4"]
[ext_resource type="Texture2D" uid="uid://f5tpvdp84nmq" path="res://sprites/mouse/Body.png" id="9_x10eb"]
[ext_resource type="Texture2D" uid="uid://cl7momyp62fch" path="res://sprites/mouse/Eyes.png" id="10_qk54l"]
[ext_resource type="Texture2D" uid="uid://cy3cbsgawgl5i" path="res://sprites/mouse/Ears.png" id="11_ptw8u"]
[ext_resource type="AudioStream" uid="uid://i4v5njr3wa47" path="res://audio/pew.mp3" id="13_0hen2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_85jr1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_o72gg")
}, {
"duration": 1.0,
"texture": ExtResource("3_p1ehp")
}, {
"duration": 1.0,
"texture": ExtResource("4_iqfua")
}, {
"duration": 1.0,
"texture": ExtResource("5_kwj5w")
}, {
"duration": 1.0,
"texture": ExtResource("6_k83jl")
}, {
"duration": 1.0,
"texture": ExtResource("7_lthv1")
}, {
"duration": 1.0,
"texture": ExtResource("8_8yq7g")
}, {
"duration": 1.0,
"texture": ExtResource("9_ixcg4")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7ee8e"]
radius = 30.0
height = 92.0

[sub_resource type="Animation" id="Animation_3w0e8"]
resource_name = "Hurt"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Illustration:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.470588), Color(1, 1, 1, 0.196078), Color(1, 1, 1, 0.470588)]
}

[sub_resource type="Animation" id="Animation_4n6il"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Illustration:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cokkn"]
_data = {
"Hurt": SubResource("Animation_3w0e8"),
"RESET": SubResource("Animation_4n6il")
}

[node name="LaserMouse" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_5o5ue")

[node name="HP" type="Node2D" parent="."]

[node name="Life1" type="ColorRect" parent="HP"]
offset_left = -48.0
offset_top = -84.0
offset_right = -18.0
offset_bottom = -74.0

[node name="Life2" type="ColorRect" parent="HP"]
offset_left = -15.0
offset_top = -84.0
offset_right = 15.0
offset_bottom = -74.0

[node name="Life3" type="ColorRect" parent="HP"]
offset_left = 18.0
offset_top = -84.0
offset_right = 48.0
offset_bottom = -74.0

[node name="Illustration" type="Node2D" parent="."]
scale = Vector2(0.333, 0.333)

[node name="Tail" type="AnimatedSprite2D" parent="Illustration"]
position = Vector2(0, 39)
sprite_frames = SubResource("SpriteFrames_85jr1")
autoplay = "default"

[node name="Body" type="Sprite2D" parent="Illustration"]
texture = ExtResource("9_x10eb")

[node name="Eyes" type="Sprite2D" parent="Illustration"]
position = Vector2(0, -99)
texture = ExtResource("10_qk54l")

[node name="Ears" type="Sprite2D" parent="Illustration"]
position = Vector2(2.08165e-12, -10)
texture = ExtResource("11_ptw8u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_7ee8e")

[node name="LaserSource" type="Node2D" parent="."]
position = Vector2(0, -57)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cokkn")
}

[node name="PewSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_0hen2")
bus = &"Sound FX"
